# tripitaka-mcp

./: . cursorrules  .dockerignore  .env.example  .gitignore  CONVENTIONS_TH.md  CREDITS.md  DEPLOYMENT.md  Dockerfile  LICENSE  NOTICE.md  README.md  claude_desktop_config.example.json  cli.py  debug_sql.py  docker-compose.prod.yml  docker-compose.yml  glama.json  init.sql  llms-install.md  main.py  mcp_app.py  mcp_app_viewer_html.py  postman_collection.json  pyproject.toml  requirements.txt  server.json  test_keyword.py  test_semantic.py
alert_bridge/: Dockerfile  app.py
api/: server.py
data/: payutto_dict.json  payutto_dict.metadata.json  scratch_dict.txt
db/: __init__.py  backend.py  connection.py  normalize.py  schema.py  sqlite_connection.py  sqlite_schema.py
docs/: CAPACITY.md
drafts/: SN56.11_MODERN_TH.md
embedding/: __init__.py  model.py
infra/: Caddyfile  Dockerfile.caddy  cloud-init.yml  domain.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
logs/: expenditure.json
mcp_app_ui/: embed.mjs  index.html  package-lock.json  package.json  vite.config.js
reader/: __init__.py  app.py  featured.py  queries.py  sutta_id_decoder.py
scratch/: check_db_status.py
scripts/: agent_worker.py  align_mbu.py  backup.sh  batch_manager.py  budget_manager.py  build_sqlite_db.py  check_embedding_progress.py  cleanup_metadata.py  data_loader.py  deploy.sh  dump_and_publish.sh  generate_embeddings.py  import_modern_cc0.py  init_45_volumes.py  init_global_structure.py  init_volume_mapping.py  install.sh  load_abhidhamma.py  load_dictionary.py  load_thai_cc0.py  load_vinaya.py  publish_sqlite_db.sh  run_embedding_with_retry.sh  scrape_payutto.py  seed_metadata.py  setup_readonly_user.sql  setup_unaccent.sql  smoke_test.sh  test_anthropic.py  test_full_sutta.py  test_pagination.py  test_survey_counts.py
site/: README.md  demo.js  index.html  llms.txt  robots.txt  sitemap.xml
skills/: README.md  tipitaka-research.md
topics/: README.md  people.md  (+5 more)
(+23 files in other folders)
