[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tripitaka-mcp"
version = "1.0.3"
description = "Local MCP server for the Pāli Tipiṭaka — verifiable Buddhist canon access for AI assistants, offline via SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhamma Seeker" }]
keywords = ["mcp", "buddhism", "pali", "tipitaka", "suttacentral", "sqlite"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Religion",
    "Topic :: Text Processing :: Linguistic",
]

# Core dependencies — เบา: local install ไม่ลาก psycopg2 / torch / fastapi
dependencies = [
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
# hosted server (PostgreSQL backend) — ไม่จำเป็นสำหรับ local install
postgres = ["psycopg2-binary>=2.9.9", "pgvector>=0.3.0"]
# hosted + semantic search (embedding model) — full hosted stack
hosted = [
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
tripitaka-mcp = "cli:main"

[project.urls]
Homepage = "https://tripitaka-mcp.com"
Source = "https://github.com/dhamma-seeker/tripitaka-mcp"
Install = "https://tripitaka-mcp.com/install/"

# โครงสร้าง flat layout — ไม่ย้ายไฟล์ (กัน Docker entrypoint กระทบ).
# pipx แยก venv ให้ → top-level module ไม่ชนกับอะไร.
[tool.setuptools]
py-modules = ["main", "cli", "mcp_app", "mcp_app_viewer_html"]

[tool.setuptools.packages.find]
include = ["db*", "embedding*"]
exclude = ["reader*", "api*", "scripts*", "site*", "topics*", "docs*", "infra*", "tests*"]
